# cli11_template

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
app/: CMakeLists.txt  main.cpp
include/: progress.hpp
source/: args.cpp  args.hpp  core.hpp  main.cpp  method.hpp
test/: CMakeLists.txt  test.cpp
